--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,10 @@
     "stdbool.h": "c",
     "array": "c",
     "string": "c",
-    "string_view": "c"
+    "string_view": "c",
+    "stdio.h": "c",
+    "dutils.h": "c",
+    "dalloc.h": "c",
+    "string.h": "c"
   }
 }
