adding test to string

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     "stdio.h": "c",
     "dutils.h": "c",
     "dalloc.h": "c",
-    "string.h": "c"
+    "string.h": "c",
+    "general_lib.h": "c"
   }
 }
