test file dstring done, added helper macro debug

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,10 @@
     "dutils.h": "c",
     "dalloc.h": "c",
     "string.h": "c",
-    "general_lib.h": "c"
+    "general_lib.h": "c",
+    "dtest.h": "c",
+    "initializer_list": "c",
+    "system_error": "c",
+    "ctype.h": "c"
   }
 }
