--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,8 @@
     "dtest.h": "c",
     "initializer_list": "c",
     "system_error": "c",
-    "ctype.h": "c"
+    "ctype.h": "c",
+    "stdlib.h": "c",
+    "random": "c"
   }
 }
