--- a/general_lib/Makefile
+++ b/general_lib/Makefile
@@ -2,6 +2,9 @@
 CFLAGS := -Wall -Wextra -MMD -g3
 
 # Directory where are located dynamic_array header files
+DSTRING_INCLUDE_DIR := ../string/includes
+
+# Directory where are located dynamic_array header files
 DYNAMIC_ARR_INCLUDE_DIR := ../dynamic_array/include
 
 # Directory where are located header files
@@ -11,20 +14,15 @@ INCLUDE_DIR := include
 HEADER_ROOT_DIR := ..
 
 # Variable that will store flags command to include headers
-INCLUDES := -I$(INCLUDE_DIR) -I$(HEADER_ROOT_DIR) -I$(DYNAMIC_ARR_INCLUDE_DIR)
+INCLUDES := -I$(INCLUDE_DIR) -I$(HEADER_ROOT_DIR) -I$(DYNAMIC_ARR_INCLUDE_DIR) -I$(DSTRING_INCLUDE_DIR)
 
-# Directory where are source files
-SRC_DIR := src
-
-# All source files
-SRC := $(shell find $(SRC_DIR) -name '*.c')
-
-# Directory where are object directory
 OBJ_DIR := objs
 
-# All object files
-OBJS := $(patsubst $(SRC_DIR)/%.c, $(OBJ_DIR)/%.o, $(SRC))
+SRCS_DIRS := src ../dynamic_array/src ../string/src
 
+SRCS := $(wildcard src/*.c) $(wildcard ../dynamic_array/src/*.c) $(wildcard ../string/src/*.c)
+OBJS := $(addprefix $(OBJ_DIR)/,$(addsuffix .o,$(notdir $(basename $(SRCS)))))
+VPATH := $(SRCS_DIRS)
 # The dependency files that will be used in order to add header dependencies
 DEPEND = $(OBJS:.o=.d)
 
@@ -44,7 +42,7 @@ $(LIB) : $(OBJS)
 		ar rcs $@ $^
 
 # Rule to generate all object file and create OBJ_DIR if not exist
-$(OBJ_DIR)/%.o : $(SRC_DIR)/%.c | $(OBJ_DIR)
+$(OBJ_DIR)/%.o : %.c | $(OBJ_DIR)
 		$(CC) $(CFLAGS) $(INCLUDES) -c $< -o $@
 
 # Header dependencies. Adds the rules in the .d files, if they exists, in order to
@@ -61,7 +59,7 @@ re : fclean $(LIB)
 # Removes all the build directories (objs, deps), executable and library
 .PHONY : fclean
 fclean : clean
-		rm -rf $(LIB_FOLDER) $(TEST_OBJ_DIR) $(TARGET)
+		rm -rf $(LIB_FOLDER) $(OBJ_DIR)
 
 # Removes the obj directory
 .PHONY : clean
